Fix bugs add new item failed on firefox browser. Count incomplete item.

--- a/src/pages/TodoList/index.css
+++ b/src/pages/TodoList/index.css
@@ -494,7 +494,7 @@ nav ul a span {
   right: 4px;
 }
 
-.inputBox button a {
+.inputBox button svg {
   color: white;
 }
 
